# openapi-codegen

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  LICENSE  README.md  build.rs  download-tool.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-release.yml  release.yml
scripts/: generate_release_files.sh
src/: api.rs  cli_v1.rs  codesamples.rs  debug.rs  docker_postprocessing.rs  generator.rs  lib.rs  main.rs  postprocessing.rs  preprocess_spec.rs  template.rs  types.rs  util.rs  utils.rs
src/api/: mod.rs  resources.rs  struct_enum.rs  types.rs
src/cli_v2/: frontmatter.rs  main.rs  mod.rs  value_vec.rs
src/postprocessing/: cli.rs  docker.rs  mod.rs
templates/: svix_cli_resource.rs.jinja  svix_cli_types.rs.jinja  svix_lib_resource.go.jinja  svix_lib_resource.kt.jinja  svix_lib_resource.rs.jinja  svix_lib_resource.ts.jinja  svix_resource.rs.jinja  svix_resource.rs.tpl
templates/rust/: api_resource.rs.jinja  api_summary.rs.jinja
templates/rust/types/: string_enum.rs.jinja  struct.rs.jinja
templates/svix-cli/: api_resource.rs.jinja
templates/svix-lib-go/: api_resource.go.jinja  component_type_summary.go.jinja
templates/svix-lib-go/api_extra/: event_type_import_openapi.go  message.go  message_attempt_list_attempted_destinations.go
templates/svix-lib-go/types/: struct.go.jinja
templates/svix-lib-java/: api_resource.java.jinja
templates/svix-lib-java/types/: integer_enum.java.jinja  string_enum.java.jinja  struct.java.jinja
templates/svix-lib-javascript/: api_resource.ts.jinja  component_type.ts.jinja
templates/svix-lib-javascript/api_extra/: application_create.ts  background_task_list.ts
templates/svix-lib-javascript/types/: integer_enum.ts.jinja  string_enum.ts.jinja  struct.ts.jinja
templates/svix-lib-kotlin/: api_resource.kt.jinja
templates/svix-lib-kotlin/api_extra/: application_create.kt  message.kt
templates/svix-lib-python/: api_resource.py.jinja  api_summary.py.jinja  component_type_summary.py.jinja
templates/svix-lib-ruby/: summary.rb.jinja
templates/svix-lib-rust/: api_resource.rs.jinja  api_summary.rs.jinja  component_type.rs.jinja
(+16 files in other folders)
