[package]
name = "openapi-codegen"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aide = "0.14.1"
anyhow = "1.0.94"
camino = "1.1.9"
clap = { version = "4.5.23", features = ["derive"] }
fs-err = "3.0.0"
heck = "0.5.0"
indexmap = "2.7.0"
itertools = "0.14.0"
minijinja = { version = "2.8.0", features = ["loader"] }
ron = "0.10.1"
schemars = "0.8.21"
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
tempfile = "3.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
